@@ -10,11 +10,11 @@
     "build": "PACKAGE_VERSION=$(json -f src/version.json) ./scripts/build",
     "release": "git clean dist/ -f && git checkout dist/ && ./scripts/release && APP_ENV=production npm run build",
     "test": "npm run test-phantom && npm run test-node && npm run lint",
-    "test-browser": "./scripts/test-browser",
-    "test-node": "node test/run-node.js",
-    "test-phantom": "DEBUG=zuul* zuul --no-coverage --phantom -- test/run-browser.js",
+    "test-browser-unit": "./scripts/test-browser",
+    "test-node-unit": "node test/run-node.js",
+    "test-phantom-unit": "DEBUG=zuul* zuul --no-coverage --phantom -- test/run-browser.js",
     "test-node-integration": "node test/run-integration.js",
-    "test-browser-integration": "DEBUG=zuul* zuul --no-coverage -- test/run-integration.js",
+    "test-browser-integration": "npm run build && DEBUG=zuul* zuul --no-coverage -- test/run-integration.js",
     "dev": "APP_ENV=development DEBUG=zuul* zuul --no-coverage --local 8080 -- test/run-browser.js",
     "examples": "http-server . -a 0.0.0.0",
     "lint": "eslint --quiet test/"
