@@ -1,5 +1,9 @@
 CHANGELOG
 
+UNRELEASED
+    * fix: send a descriptive timeout error when it occurs
+    * chore: add headers debugging
+
 2015-05-23 3.4.0
     * FIX: Remove debugging messages from builds
       fixes #91
